--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -58,4 +58,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
+    </dependencies>
+
 </project>
