--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
